fixed the footer and added the toolkit on mobile view

--- a/src/component/Directory/styles.scss
+++ b/src/component/Directory/styles.scss
@@ -8,3 +8,9 @@
 a{
     padding: 20px !important;
 }
+
+@media (max-width: 640px){
+    .wrapper{
+        display: none !important;
+    }
+}
